// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.filedownload";
option java_outer_classname = "FileDownloadService";
option objc_class_prefix = "FDLS";

package filedownload;

message DataChunk {
    bytes data = 1;
}

// The file download service definition.
service FileDownload {
  // Downlod a file
  rpc Download(FileDownloadRequest) returns (stream DataChunk) {}
}

// The request message containing the user's name.
message FileDownloadRequest {
  string url = 1;
}